manifests/overlays/aws-eks/statefulset-storage-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: carts-db
  namespace: sock-shop
spec:
  volumeClaimTemplates:
  - metadata:
      name: carts-db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: gp3
      resources:
        requests:
          storage: 10Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: orders-db
  namespace: sock-shop
spec:
  volumeClaimTemplates:
  - metadata:
      name: orders-db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: gp3
      resources:
        requests:
          storage: 10Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-db
  namespace: sock-shop
spec:
  volumeClaimTemplates:
  - metadata:
      name: user-db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: gp3
      resources:
        requests:
          storage: 10Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: catalogue-db
  namespace: sock-shop
spec:
  volumeClaimTemplates:
  - metadata:
      name: catalogue-db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: gp3
      resources:
        requests:
          storage: 10Gi
