manifests/overlays/aws-eks/netpol-alb-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-frontend
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: front-end
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8079
